package decorador;

public interface Inscripcion {
    void inscribir(Estudiante estudiante, String carrera);
}
